# lambdabench

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  README.md  RUNBOOK.md
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml
bencher/: Cargo.toml  build.rs
bencher/fixtures/: README.md  generate.mjs
bencher/src/: aws.rs  build.rs  config.rs  deploy.rs  main.rs  parse.rs  probe.rs  record.rs  run.rs  teardown.rs
bencher/src/aws/: ddb.rs  ecr.rs  iam.rs  kms.rs  lambda.rs  logs.rs  rate_limiter.rs  s3.rs
bencher/src/probe/: download_start.rs  image.rs  sample.rs  synthetic.rs
deploy/: Dockerfile  README.md  run-benchmark.sh  run.sh
deploy/cdk/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
deploy/cdk/lib/: bench-runner-stack.ts  constants.ts  ecr-stack.ts  edge-stack.ts  site-stack.ts
deploy/cdk/test/: bench-runner-stack.test.ts  edge-stack.test.ts  site-stack.test.ts
devtools/: Cargo.toml
devtools/src/: main.rs
scenarios/go/: go.mod  go.sum
scenarios/go/authz/: main.go
scenarios/go/batch/: main.go
scenarios/go/cache/: main.go
scenarios/go/hello/: main.go
scenarios/go/lettercount/: main.go
scenarios/go/oneclient/: main.go
scenarios/go/threeclient/: main.go
scenarios/java/: build.gradle.kts  gradle.properties  settings.gradle.kts
scenarios/java/authz/: build.gradle.kts
scenarios/java/authz/src/main/java/lambdabench/: AuthzHandler.java
scenarios/java/batch/: build.gradle.kts
scenarios/java/batch/src/main/java/lambdabench/: BatchHandler.java
scenarios/java/cache/: build.gradle.kts
scenarios/java/cache/src/main/java/lambdabench/: CacheHandler.java
scenarios/java/hello/: build.gradle.kts
scenarios/java/hello/src/main/java/lambdabench/: HelloHandler.java
scenarios/java/lettercount/: build.gradle.kts
scenarios/java/lettercount/src/main/java/lambdabench/: LetterCountHandler.java
scenarios/java/oneclient/: build.gradle.kts
scenarios/java/oneclient/src/main/java/lambdabench/: OneClientHandler.java
scenarios/java/smithy/: build.gradle.kts
scenarios/java/smithy/src/main/java/lambdabench/: CoffeeShopProvider.java
scenarios/java/smithyfull/: build.gradle.kts  smithy-build.json
scenarios/java/smithyfull/src/main/java/lambdabench/: CoffeeShopFullProvider.java
scenarios/java/threeclient/: build.gradle.kts
scenarios/java/threeclient/src/main/java/lambdabench/: ThreeClientHandler.java
scenarios/node/: build.mjs  package-lock.json  package.json
scenarios/node/authz/: index.mjs
scenarios/node/batch/: index.mjs
scenarios/node/cache/: index.mjs
scenarios/node/hello/: index.mjs
scenarios/node/lettercount/: index.mjs
scenarios/node/oneclient/: index.mjs
scenarios/node/smithy/: build.gradle.kts  gradle.properties  index.mjs  settings.gradle.kts
scenarios/node/smithy/smithy/: build.gradle.kts  smithy-build.json
scenarios/node/smithyfull/: index.mjs
scenarios/node/threeclient/: index.mjs
scenarios/python/authz/: handler.py  requirements.txt
scenarios/python/batch/: handler.py
scenarios/python/cache/: handler.py
scenarios/python/hello/: handler.py
scenarios/python/lettercount/: handler.py
scenarios/python/oneclient/: handler.py  requirements.txt
scenarios/python/threeclient/: handler.py
scenarios/rust/authz/: Cargo.toml  build.rs
scenarios/rust/authz/src/: main.rs
scenarios/rust/batch/: Cargo.toml
scenarios/rust/batch/src/: main.rs
scenarios/rust/cache/: Cargo.toml
scenarios/rust/cache/src/: main.rs
scenarios/rust/hello/: Cargo.toml
scenarios/rust/hello/src/: main.rs
scenarios/rust/lettercount/: Cargo.toml
scenarios/rust/lettercount/src/: main.rs
scenarios/rust/oneclient/: Cargo.toml
scenarios/rust/oneclient/src/: main.rs
scenarios/rust/smithy/: gradle.properties  settings.gradle.kts
scenarios/rust/smithy/server/: Cargo.toml  build.gradle.kts  smithy-build.json
scenarios/rust/smithy/server/src/: main.rs
scenarios/rust/smithy/smithy/: build.gradle.kts
scenarios/rust/smithyfull/: Cargo.toml
scenarios/rust/smithyfull/src/: main.rs
scenarios/rust/threeclient/: Cargo.toml
scenarios/rust/threeclient/src/: main.rs
scripts/: check-findings-prose.py  check-lifecycle-prose.py  check.sh
site/: .prettierignore  README.md  eslint.config.js  observablehq.config.js  package-lock.json  package.json  vitest.config.js
site/scripts/: gen-seo-files.js
site/src/: appendix.md  comparison.md  index.md  java-snapstart.md  lifecycle.md  rust.md  styles.css
site/src/components/: charts.js  filters.js  tables.js  theme.js
site/src/data/: lifecycle-download-scaling-image.json.js  lifecycle-download-scaling.json.js  lifecycle-download-start.json.js  stats.json.js
site/src/lib/: aggregate.js  format.js  results-input.js  series.js  stats.js
site/test/: aggregate.test.js  format.test.js  results-input.test.js  series.test.js  stats.test.js
