[package]
name = "bencher"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# The benchmark driver: builds artifacts, provisions AWS infra, runs the
# cold/warm invocation matrix, and writes the results data file.

[[bin]]
name = "bencher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
flate2 = "1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tar = "0.4"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1"
aws-sdk-dynamodb = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
aws-sdk-ecr = "1"
aws-sdk-cloudwatchlogs = "1"
aws-smithy-runtime-api = "1"

[dev-dependencies]
# `test-util` enables tokio's paused test clock (`start_paused`) for
# deterministic, instant rate-limiter timing tests.
tokio = { version = "1", features = ["test-util"] }
