[package]
name = "lambdabench-rust-cache"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Scenario "cache": a long-lived in-memory working set, churned every invoke,
# the dedicated garbage-collection probe. At init the handler allocates a large
# RETAINED live set (~100 MB of byte buffers) held across warm invokes, like an
# in-process cache / buffer pool. Each invoke replaces a fraction of it (garbage
# against a permanently-live heap) and scans it. A tracing GC's per-cycle cost
# scales with the LIVE heap it must trace, so at the fractional-vCPU tiers its
# collector steals time from the handler and the warm P99 tail blows up; this
# (non-GC) runtime frees each replaced buffer immediately and stays flat.
# Contrast `batch`, whose object graph is transient (dropped at end of invoke).

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
