[package]
name = "lambdabench-rust-hello"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Scenario "hello": pure runtime + handler-dispatch baseline.

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
