[package]
name = "lambdabench-rust-lettercount"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Scenario "lettercount": CPU-bound work, no per-invoke I/O. At init the handler
# fetches a ~1 MB JSON array of ASCII strings from S3 and holds it in memory;
# each warm invoke parses it and counts lowercase-letter occurrences per entry,
# returning 26 per-letter totals. The counting is a tight in-language byte loop
# (Rust machine code vs the V8 JIT), not a native library both runtimes call, so
# it measures the language. The parse allocates a fresh object graph per invoke.
# Fetching at init (not per invoke) keeps the warm measurement pure compute.

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
aws-config = "1"
aws-sdk-s3 = "1"
