[package]
name = "lambdabench-rust-oneclient"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Scenario "oneclient": construct ONE AWS SDK client (DynamoDB) at init and call
# it once (GetItem) per invoke. Cold cost vs `hello` isolates the cost of a
# single AWS client: middleware stack + credential resolution + first TLS.

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
