[package]
name = "lambdabench-rust-threeclient"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Scenario "threeclient": construct THREE AWS SDK clients (DynamoDB, KMS, S3) at
# init and call all three per invoke (DDB GetItem + KMS Encrypt + S3 GetObject).
# Cold cost vs `oneclient` isolates the marginal cost of additional AWS clients
# (extra middleware stacks + first TLS handshakes per distinct service endpoint).

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
