[package]
name = "lambdabench-rust-smithy"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Scenario "smithy": host the generated Smithy server SDK behind a Lambda
# handler with NO AWS call. GetMenu returns a constant, so the cold delta versus
# `hello` isolates pure Smithy-framework overhead.

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# lambda_http MUST match what aws-smithy-http-server 0.65.x pins (^0.8.4),
# which is built on http 0.2 / hyper 0.14. Do not bump to 1.x.
lambda_http = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Generated server SDK, with the Lambda adapter enabled.
coffeeshop_server_sdk = { path = "./build/smithyprojections/server/source/rust-server-codegen", features = ["aws-lambda"] }

# This crate is a standalone cargo project (excluded from the root workspace
# because it depends on gradle-generated code), so it does NOT inherit the root
# workspace's [profile.lambda]. Declare the SAME optimizations here under the
# same profile name (bencher builds every Rust scenario with `--profile lambda`)
# so all Rust scenarios are compiled identically (fair comparison). Without this,
# cargo lambda's default lto="thin" would apply instead of our lto="fat".
[profile.lambda]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
